deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tekton-deployment
spec:
  selector:
    matchLabels:
      app: trigger-demo
  template:
    metadata:
      labels:
        app: trigger-demo
    spec:
      containers:
      - name: tekton-pod
        image: usmanasim11/tekton-lab-app:2.0
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: tekton-svc
spec:
  selector:
    app: trigger-demo
  ports:
  - port: 3000
    protocol: TCP
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: tekton-ingress
# spec:
#   rules:
#   - http:
#       paths:
#       - pathType: Prefix
#         path: "/"
#         backend:
#           service:
#             name: tekton-svc
#             port: 
#               number: 3000

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.org/keepalive: "50000"
spec:
  rules:
  - http:
      paths:
      - path: /dashboard(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: tekton-svc
            port:
              number: 3000
